https://jira.catena-x.net/browse/KA-325 attention when doing multi-party negotiation, providerId is the consumer partner. Debug Embedded Service/Asset context resolution and non-based asset names.